# raspberry_translator

./: .gitignore  AUDIO_STREAMING_FIXES.md  CHANGELOG.md  FIXES_SUMMARY.md  LICENSE  PARAKEET_FIX.md  PARAKEET_SUPPORT.md  QUICKSTART_CONFIG.md  README.md  STREAMING_TRANSCRIPTION.md  STREAMING_TRANSCRIPTION_FIXES.md  create_config.py  language_selector.py  pyproject.toml  requirements.txt  requirements_parakeet.txt  setup.sh  test_audio.py  test_parakeet_model.py  test_parakeet_support.py  test_setup.py  test_translation_fix.py  test_translation_simple.py
config/: README.md  config.example.yaml  streaming_config.yaml  streaming_config_parakeet.yaml
scripts/: create_config.py  download_models.py  download_parakeet_model.py  language_selector.py  run.sh  run_streaming_transcribe.sh  run_translator.py  setup.sh  streaming_transcribe.py  test_setup.py
src/: __init__.py  audio_handler.py  config.py  history.py  lang_detect.py  lang_select.py  logging_setup.py  main.py  models.py  recovery.py  translator.py  tts_lang.py  vad.py  validator.py  web.py
tests/: conftest.py  test_audio_handler.py  test_config.py  test_logging.py  test_onnx.py  test_pipeline.py  test_recovery.py  test_web.py
